<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".Registration">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:fontFamily="@font/arial"
        android:gravity="center"
        android:padding="10dp"
        android:text="CollegeBar"
        android:textColor="@color/white"
        android:textSize="40sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#11000000"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_action_person"
            android:hint="@string/name"
            android:maxLength="20"
            android:textSize="18sp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/errorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#ff0000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/ic_action_phone"
                android:background="#11000000"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#11000000"
                android:ems="10"
                android:maxLength="10"
                android:padding="5dp"
                android:textColor="@color/black"
                android:hint="Phone Number"
                android:inputType="number"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/errorPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="#ff0000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/scrollbar"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#11000000"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_action_pass"
                android:drawableStart="@drawable/ic_action_pass"
                android:hint="@string/password"
                android:maxLength="12"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/errorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#ff0000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/scrollbar"
            >


            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#11000000"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_action_pass"
                android:drawableStart="@drawable/ic_action_pass"
                android:hint="@string/confirmpassword"
                android:maxLength="12"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/errorConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#ff0000" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:layout_marginRight="40dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        />

    <TextView
        android:id="@+id/textViewPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/policy1"/>


    <Button
        android:id="@+id/create"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/create"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/button_round"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"/>


</LinearLayout>